--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,12 @@
                     <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="courses.html">Courses</a>
                     </li>
                     <li>
                         <a href="blog.html">Blog</a>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="seminar.html">Seminar</a>
                     </li>
@@ -93,21 +93,21 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-md-8">
-                    <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
+                <!--<div class="col-md-8">
+                     Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! 
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7202.725352381073!2d81.86603945!3d25.49294835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399aca78818ddc51%3A0x6690dd2de3a1415b!2sMNNIT!5e0!3m2!1sen!2sus!4v1437419508523" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
+                </div>-->
                 <div class="col-md-4">
                     <p>Phone:
-                        <strong>7897[three-six]69-36</strong>
+                        <strong>9205[three-six]75-63</strong>
                     </p>
                     <p>Email:
-                        <strong><a href="mailto:ravishankarkumarATliveDOTcom">ravishankarkumarATliveDOTcom</a></strong>
+                        <strong><a href="mailto:ravishankarkumar[AT]live[DOT]com">ravishankarkumar[AT]live[DOT]com</a></strong>
                     </p>
-                    <p>Address:
+                    <!--<p>Address:
                         <strong>Patel-263
                             <br>MNNIT Allahabad, Allahabad-211004 UP</strong>
-                    </p>
+                    </p>-->
                 </div>
                 <div class="clearfix"></div>
             </div>
