--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/web-1.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/q1.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/android.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/q2.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/congrat-arpit.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/q3.jpg" alt="">
                             </div>
                         </div>
 
