--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <!--<div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
@@ -125,7 +125,7 @@
                     <iframe src="https://docs.google.com/forms/d/1_YyGAGv3Eepug0J9wtrvKoJalBsYTsr0Iq103yo3tQg/viewform?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                 </div>
             </div>
-        </div>
+        </div>-->
 
     </div>
     <!-- /.container -->
